<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">


    <TextView
        android:id="@+id/tv_header_frag_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/black"

        android:gravity="center"
        android:padding="13dp"
        android:text="@string/tv_header_frag_login"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <EditText
        android:id="@+id/et_email_frag_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"

        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_frag_login" />

    <EditText
        android:id="@+id/et_password_frag_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"

        android:hint="@string/et_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"

        app:layout_constraintEnd_toEndOf="@+id/et_email_frag_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email_frag_login"
        app:layout_constraintTop_toBottomOf="@+id/et_email_frag_login" />

    <Button
        android:id="@+id/btn_register_frag_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"

        android:textAllCaps="false"

        app:layout_constraintBaseline_toBaselineOf="@+id/btn_login_frag_login"
        app:layout_constraintStart_toStartOf="@+id/et_password_frag_login" />

    <Button
        android:id="@+id/btn_login_frag_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:text="@string/btn_login"
        android:textAllCaps="false"

        app:layout_constraintEnd_toEndOf="@+id/et_password_frag_login"
        app:layout_constraintTop_toBottomOf="@+id/et_password_frag_login" />

    <ProgressBar
        android:id="@+id/pb_frag_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"

        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_frag_login" />

    <Button
        android:id="@+id/btn_google_account_login_frag_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/material_dynamic_primary40"

        android:text="@string/btn_google_account_login_frag_login"
        android:textAllCaps="false"

        app:layout_constraintEnd_toEndOf="@+id/btn_login_frag_login"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/btn_register_frag_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_frag_login" />


</androidx.constraintlayout.widget.ConstraintLayout>