<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_vehicle_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:paddingBottom="35dp">


        <TextView
            android:id="@+id/tv_name_vehicle_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_margin="35dp"
            android:layout_marginStart="35dp"
            android:text="@string/tv_name_vehicle_row"
            android:textColor="@color/white"

            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_model_vehicle_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="35dp"
            android:text="@string/tv_model_vehicle_row"
            android:textColor="@color/white"

            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/tv_name_vehicle_row"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_vehicle_row" />

        <TextView
            android:id="@+id/tv_cost_vehicle_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="35dp"
            android:text="@string/tv_cost_vehicle_row"
            android:textColor="@color/white"

            android:textSize="19sp"
            app:layout_constraintStart_toStartOf="@+id/tv_model_vehicle_row"
            app:layout_constraintTop_toBottomOf="@+id/tv_model_vehicle_row" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>