<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_header_frag_home"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="@color/black"
        android:gravity="center"
        android:text="@string/tv_header_frag_home"

        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_signout_frag_home" />

    <TextView
        android:id="@+id/tv_signout_frag_home"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:background="#0F3142"
        android:gravity="center"
        android:text="@string/btn_signout_frag_home"
        android:textAllCaps="false"
        android:textColor="@color/white"

        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <TextView
        android:id="@+id/tv_title_frag_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#283B4E"

        android:gravity="center"
        android:padding="15dp"
        android:text="@string/tv_title_frag_home"
        android:textColor="@color/white"
        android:textSize="20sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_vehicle_list_frag_home"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:background="#262627"

        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_frag_home" />

</androidx.constraintlayout.widget.ConstraintLayout>